--- a/Sunduk.PWA/Dialogs/FeedBackDialog.razor
+++ b/Sunduk.PWA/Dialogs/FeedBackDialog.razor
@@ -14,9 +14,21 @@
     <DialogContent>
         <div class="ma-0" style="width:300px;overflow: auto;">
             <MudText Typo="Typo.body1" Align="Align.Left">
-                Свяжитесь со мной по электронной почте <MudLink Typo="Typo.body1" Href="@("mailto:dece1ver@sunduk.one")">dece1ver@sunduk.one</MudLink> либо используйте 
-                <MudLink Typo="Typo.body1" Href="https://localhost:7080/">форму обратной связи</MudLink>.
+                Отправить замечания и пожелания можно следующими способами:
             </MudText>
+            <MudText Typo="Typo.body2" Align="Align.Left">
+                    <p>
+                        • Email: <MudLink Typo="Typo.body2" Href="@("mailto:dece1ver@sunduk.one")">dece1ver@sunduk.one</MudLink>;
+                    </p>
+                    <p>
+                        • <MudLink Typo="Typo.body2" Href="https://sunduk-fb.azurewebsites.net/">Сайт обратной связи</MudLink>;
+                    </p>
+                    <p>
+                        • Форма ниже.
+                    </p>
+            </MudText>
+            <MudTextField Class="feedback-form" T="string" Label="Имя" Variant="Variant.Filled" @bind-Value="Name" Immediate="true" />
+            <MudTextField Class="feedback-form" T="string" Label="Сообщение" Variant="Variant.Filled" @bind-Value="Message" Lines="5" Immediate="true" />
         </div>
     </DialogContent>
     <DialogActions>
@@ -38,39 +50,38 @@
 
     async void Submit()
     {
-        Snackbar.Add("Отправка через эту форму временно недоступна :с", Severity.Warning);
-        //if (string.IsNullOrWhiteSpace(Name))
-        //{
-        //    Snackbar.Add("Имя не должно быть пустым!", Severity.Error);
-        //}
-        //else if (string.IsNullOrWhiteSpace(Message))
-        //{
-        //    Snackbar.Add("Сообщение не должно быть пустым!", Severity.Error);
-        //}
-        //else
-        //{
-        //    Status = "Progress";
+        if (string.IsNullOrWhiteSpace(Name))
+        {
+            Snackbar.Add("Имя не должно быть пустым!", Severity.Error);
+        }
+        else if (string.IsNullOrWhiteSpace(Message))
+        {
+            Snackbar.Add("Сообщение не должно быть пустым!", Severity.Error);
+        }
+        else
+        {
+            Status = "Progress";
 
-        //    try
-        //    {
-        //        Status = await http.GetStringAsync($"https://api.sunduk.one/sendmessage|{WebUtility.UrlEncode(Encode(Name))}|{WebUtility.UrlEncode(Encode(Message))}");
+            try
+            {
+                Status = await http.GetStringAsync($"https://sunduk-api.azurewebsites.net/sendmessage|{WebUtility.UrlEncode(Encode(Name))}|{WebUtility.UrlEncode(Encode(Message))}");
 
-        //        if (Status == "Ok")
-        //        {
-        //            MudDialog.Close(DialogResult.Ok(true));
-        //            Snackbar.Add($"Сообщение отправлено!", Severity.Success);
-        //        }
-        //        else
-        //        {
-        //            Snackbar.Add($"Не удалось отправить сообщение.", Severity.Error);
-        //        }
-        //    }
-        //    catch (Exception e)
-        //    {
-        //        Status = e.Message;
-        //        Snackbar.Add($"Не удалось отправить сообщение.", Severity.Error);
-        //    }
-        //}
+                if (Status == "Ok")
+                {
+                    MudDialog.Close(DialogResult.Ok(true));
+                    Snackbar.Add($"Сообщение отправлено!", Severity.Success);
+                }
+                else
+                {
+                    Snackbar.Add($"Не удалось отправить сообщение.", Severity.Error);
+                }
+            }
+            catch (Exception e)
+            {
+                Status = e.Message;
+                Snackbar.Add($"Не удалось отправить сообщение.", Severity.Error);
+            }
+        }
     }
 
     private string Encode(string message)
